增加工具库样式

--- a/mirrorui/stylus/function/extendclass.styl
+++ b/mirrorui/stylus/function/extendclass.styl
@@ -185,6 +185,10 @@ $ext-overflow-y-hidden
     overflow-y:hidden
 $ext-overflow-y-auto
     overflow-y:auto
+$ext-overflow-hidden
+    overflow:hidden
+$ext-overflow-auto
+    overflow:auto
 
 //============
 // color
