--- a/mirrorui/stylus/tools.styl
+++ b/mirrorui/stylus/tools.styl
@@ -1,5 +1,6 @@
 ﻿// =======================================================================
-// 工具样式,模仿tailwindcss.思想在于灵活组合,非常适合多变的页面设计,尤其是在布局方面,
+// 原子样式
+// 模仿tailwindcss.思想在于灵活组合,非常适合多变的页面设计,尤其是在布局方面,
 // 在简单的UI界面使用不多的样式也可以快速成型.复杂的UI界面就有点吃力了,用到太多的样式,
 // 不过也可以用定好组件,怎样方便就好.
 // 每个样式一条css规则,也有一些是组合的,比如栅格布局,这个项目制作了常用的css条目,
@@ -23,10 +24,6 @@
 //
 @import "base"
 
-// 布局组件
-@import "coms/grids"
-@import "coms/layoutline"
-
 // 工具样式
 @import "tools/display"
 @import "tools/align"
@@ -35,3 +32,5 @@
 @import "tools/border"
 @import "tools/text"
 @import "tools/width"
+@import "tools/gridflex"
+@import "tools/overflow"
