--- a/mirrorui/stylus/tools/width.styl
+++ b/mirrorui/stylus/tools/width.styl
@@ -1,7 +1,7 @@
 ﻿// 宽度和高度
 
 // 像素单位,vw/vh/百分比单位
-for size in range(1,100,1)
+for size in range(1,99,1)
     px=size*1px
     percent=size*1%
     vw=size*1vw
@@ -18,6 +18,14 @@ for size in range(1,100,1)
         height:percent
     .h-{size}vh
         width:vh
+
+// 像素单位100px以上时
+for size in range(100,1000,10)
+    px=size*1px
+    .w-{size}
+        width:px
+    .h-{size}
+        height:px
 
 // 自适应容器宽度
 .w-autosize
