--- a/mirrorui/stylus/coms/grids.styl
+++ b/mirrorui/stylus/coms/grids.styl
@@ -5,12 +5,13 @@ for i in range(1, 12)
     .grids-{i}
         @extend $ext-display-grid
         grid-template-columns: repeat(i, percentage((1 / i)))
-        overflow: hidden
+        @extend $ext-overflow-hidden
 // 根据屏幕尺寸,采取不同的均分比例.
 grids_n(screen-type)
     for i in range(1, 12)
         .grids-{screen-type}-{i}
             grid-template-columns: repeat(i, percentage((1 / i)))
+            @extend $ext-overflow-hidden
 // 使用min-width(大于xx像素)媒体查询时,一定要从小到大的屏幕大小顺序定义样式,否则小屏幕的样式会覆盖大的
 // > 640
 @media only screen and (min-width: $screen-phone)
@@ -29,22 +30,24 @@ grids_n(screen-type)
 // flex布局,册格工具样式定义,其内项目决定册格占比
 // =====================================================
 .grids
-    display: flex
+    @extend $ext-display-flex
     flex-wrap: wrap // 规定项目超过一行时,可以换到下一行
+    @extend $ext-overflow-hidden
 // 均分的册格 n个册格,宽度为1/n
 .grid
     flex: 1 1 auto
-    overflow: hidden
+    @extend $ext-overflow-hidden
 // 12列册格(mixinx) 默认用于手机,移动优先
 for i in range(1, 12)
     .grid-{i}
         flex: 0 1 percentage((i / 12))
-        overflow: hidden
+        @extend $ext-overflow-hidden
 // 根据屏幕尺寸,采取不同的均分比例. grid-n 表示占据n/12的宽度
 grid_n(screen-type)
     for i in range(1, 12)
         .grid-{screen-type}-{i}
             flex: 0 1 percentage((i / 12))
+            @extend $ext-overflow-hidden
 // > 640
 @media only screen and (min-width: $screen-phone)
     grid_n(sm)
