删除部分废弃组件文档整理

--- a/mirrorui/stylus/coms/range.styl
+++ b/mirrorui/stylus/coms/range.styl
@@ -19,6 +19,7 @@
         @extend $ext-border-cir-default
         @extend $ext-border-1px
         border-left:0 solid var(--t-range-bar-bg-color)
+        @extend $ext-cursor-pointer
     // 显示值的框和滑块同大小
     &-btn,&-txt
         @extend $ext-display-inline-block
